feat: add reload command and modernize codebase for Purpur 1.20+
	- Implement `/luckywheel reload` sub-command with permission node `Daperkz.luckywheel.admin`
	- Refactor subcommand handling into a modular execution structure
	- Migrate text rendering to Adventure API (MiniMessage & Component) replacing deprecated ChatColor
	- Safely cancel active tasks and scheduler loops during plugin reload and server shutdown
	- Update TabCompleter dynamically based on user permission nodes
	- Update pom.xml dependencies to target `purpur-api` 1.20.4-R0.1-SNAPSHOT